tests/baselines/reference/parserGreaterThanTokenAmbiguity11.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity11.ts(1,1): error TS2364: Invalid left-hand side of assignment expression.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity11.ts (1 errors) ====
    1 >>= 2;
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.